# FInancialSearchEngine

./: AVLIntTree.cpp  AVLIntTree.h  AVLTree.h  BinarySearchTree.h  CMakeLists.txt  DataStructure_Tests.cpp  DocumentParser.cpp  DocumentParser.h  Query.cpp  Query.h  README.md  UI.cpp  UI.h  main.cpp  punct.txt
Data/: punct.txt
porter2_stemmer/: CMakeLists.txt
